# EvolvingModularRobots_Unity

./: .gitignore  README.md
EMR/: README.md  pyproject.toml  requirements.txt  setup.py
EMR/emr/: __init__.py  evolving_modular.py
EMR/emr/config/: config_handler.py  custom_controller.py
EMR/emr/controller/: __init__.py  abstract_controller.py  custom_controller.py  decentralized_controller.py  phase_coupled_oscillator.py
EMR/emr/encoding/: LSystem.py  __init__.py  abstract_encoding.py  cell_differentiation.py  direct_encoding.py  robot_graph.py  robot_module.py
EMR/emr/environment/: evaluation.py
EMR/emr/evolution/: deap_interface.py  ea_utility.py  load_best.py
EMR/emr/stats/: graph_visualizer.py  statistics_logger.py
EMR/emr/unity/: __init__.py  unity_side_channel.py
EMR/src/: setup.py
EMR/src/emr/: __init__.py  innervation_test.py
EMR/src/emr/config/: __init__.py  config_handler.py  config_utility.py  custom_controller.py
EMR/src/emr/controller/: abstract_controller.py  custom_controller.py  decentralized_controller.py  phase_coupled_oscillator.py
EMR/src/emr/encoding/: __init__.py  abstract_encoding.py  direct_encoding.py  graph_grammar.py  paleobot_encoding.py  robot_graph.py  robot_module.py  robot_module_utility.py
EMR/src/emr/environment/: __init__.py  evaluation.py  settings.py
EMR/src/emr/evolution/: __init__.py  deap_interface.py  load_best.py  nsga2.py
EMR/src/emr/stats/: graph_visualizer.py  stat_plotter.py  statistics_logger.py
EMR/src/emr/unity/: unity_side_channel.py
EMR/tests/: __init__.py  test_loading_and_saving.py  tests.py
(+12 files in other folders)
