[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emr"
version = "0.0.1"
authors = [
  { name="Frank Veenstra", email="f.veenstra@gmail.com" },
]
description = "Solution that combines Unity ML Agents and DEAP to evolve tree-based modular robots"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
	"deap==1.3.3",
	"tqdm>=4.65.0",
	"matplotlib>=3.5.3",
	"protobuf==3.20.0",
	"numpy==1.21.2",
	"mlagents==0.29.0",
	"patool==1.12"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"