[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emr"
version = "0.0.2"
authors = [
  { name="Frank Veenstra", email="f.veenstra@gmail.com" },
]
description = "Solution that combines Unity ML Agents and DEAP to evolve tree-based modular robots"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
	"deap==1.3.3",
	"tqdm>=4.65.0",
	"matplotlib>=3.5.3",
	"protobuf==3.20.2",
	"mlagents==1.1.0",
	"patool==1.12",
	"requests",
	"numpy==1.23.5"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"